--- a/Styles/admin_register_user.css
+++ b/Styles/admin_register_user.css
@@ -5,7 +5,7 @@ body {
   }
   
   .admin-container {
-    max-width: 600px;
+    max-width: 80%;
     margin: 50px auto;
     padding: 20px;
     background-color: #fff;
