Bug Fixed Success

--- a/Styles/student_meeting.css
+++ b/Styles/student_meeting.css
@@ -4,6 +4,11 @@
     margin: auto;
   }
 
+  .disabled-option {
+      background-color: #ccc;
+      color: #777;
+  }
+
 .meeting-ul{
   list-style-type: none;
   padding: 10px;
