--- a/Styles/Studentprofile.css
+++ b/Styles/Studentprofile.css
@@ -10,7 +10,14 @@
   padding: 1rem; /* Padding */
 }
   .container-md{
+  
+    margin: 50px auto;
+    
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding-top:5%;
+    background-color: #fff;
   }
 
   
