--- a/Styles/admin_register_user.css
+++ b/Styles/admin_register_user.css
@@ -12,7 +12,15 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
-  
+    .container-md{
+    margin: 50px auto;    
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding-top:5%;
+    background-color: #fff;
+  }
+
   h2 {
     color: #333;
   }
